update head links for rss

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -35,7 +35,13 @@ const social_image = "";
   rel="alternate"
   type="application/rss+xml"
   title="Linaro.org"
-  href={new URL("rss.xml", Astro.site)}
+  href={new URL("rss/news.xml", Astro.site)}
+/>
+<link
+  rel="alternate"
+  type="application/rss+xml"
+  title="Linaro.org"
+  href={new URL("rss/blog.xml", Astro.site)}
 />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
