relocate calender invite

--- a/src/components/sections/ConnectSaveDate.astro
+++ b/src/components/sections/ConnectSaveDate.astro
@@ -1,6 +1,7 @@
 ---
 import type { connectSaveDateSchema } from "@/content/schemas/sections";
 import type { z } from "astro/zod";
+import { details } from "../../assets/connect-2025-invite";
 
 type Props = z.infer<typeof connectSaveDateSchema>;
 
@@ -18,49 +19,26 @@ const { style } = Astro.props;
   >
 </div>
 
-<script>
+<script define:vars={{ details }}>
   if (document.getElementById("saveTheDateBtn") === null) {
     return;
   } else {
     document
       .getElementById("saveTheDateBtn")
       .addEventListener("click", function () {
-        let icsContent = `
-BEGIN:VCALENDAR
-PRODID:-//Google Inc//Google Calendar 70.9054//EN
-VERSION:2.0
-CALSCALE:GREGORIAN
-METHOD:PUBLISH
-X-WR-CALNAME:Linaro Connect 2025
-X-WR-TIMEZONE:Europe/London
-BEGIN:VEVENT
-DTSTART;VALUE=DATE:20250513
-DTEND;VALUE=DATE:20250517
-DTSTAMP:20241007T105954Z
-UID:6917bh86gu74ftdsmfgo0qqkq8@google.com
-CREATED:20241007T105820Z
-LAST-MODIFIED:20241007T105939Z
-LOCATION:Corinthia Lisbon\, Av. Columbano Bordalo Pinheiro 105\, 1099-031 L
- isboa\, Portugal
-SEQUENCE:0
-STATUS:CONFIRMED
-SUMMARY:Linaro Connect
-TRANSP:TRANSPARENT
-END:VEVENT
-END:VCALENDAR
-`;
+        let icsContent = details;
 
         let blob = new Blob([icsContent], { type: "text/calendar" });
         let url = URL.createObjectURL(blob);
         let a = document.createElement("a");
         a.href = url;
-        a.download = "event.ics";
+        a.download = "linaro-connect.ics";
         document.body.appendChild(a);
         a.click();
         document.body.removeChild(a);
       });
 
-    function formatDate(date: Date) {
+    function formatDate(date) {
       return date.toISOString().replace(/[-:]/g, "").split(".")[0] + "Z";
     }
   }
