--- a/src/components/hero/ConnectHero.astro
+++ b/src/components/hero/ConnectHero.astro
@@ -5,7 +5,9 @@ import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
 import CloudinaryVideo from "../cloudinary/CloudinaryVideo.astro";
 
 type Props = CollectionEntry<"pages">["data"]["connectHero"];
-const { background, inner_image, description, dates, child_page } = Astro.props;
+
+const { background, inner_image, description, dates, child_page } =
+  Astro.props!;
 ---
 
 {
@@ -18,16 +20,18 @@ const { background, inner_image, description, dates, child_page } = Astro.props;
         height={400}
         class="m-0"
       />
-      <div class="overlay">
-        <div class="overlay-content">
-          <CloudinaryImg
-            src={inner_image}
-            alt="Linaro Connect Logo"
-            width={400}
-            height={400}
-          />
+      {inner_image && (
+        <div class="overlay">
+          <div class="overlay-content">
+            <CloudinaryImg
+              src={inner_image}
+              alt="Linaro Connect Logo"
+              width={400}
+              height={400}
+            />
+          </div>
         </div>
-      </div>
+      )}
     </div>
   ) : (
     <div class="video-container border-b-[10px] border-b-[#ffce00] border-solid">
@@ -37,12 +41,14 @@ const { background, inner_image, description, dates, child_page } = Astro.props;
       </video>
       <div class="overlay bg-[rgba(0,_0,_0,_0.6)]">
         <div class="overlay-content">
-          <CloudinaryImg
-            src={inner_image}
-            alt="Linaro Connect Logo"
-            width={200}
-            height={200}
-          />
+          {inner_image && (
+            <CloudinaryImg
+              src={inner_image}
+              alt="Linaro Connect Logo"
+              width={200}
+              height={200}
+            />
+          )}
           <h1 class="text-3xl">{description}</h1>
           <h1 class="text-linaro-yellow text-3xl">{dates}</h1>
         </div>
