--- a/src/components/sections/DateCountdown.astro
+++ b/src/components/sections/DateCountdown.astro
@@ -7,8 +7,8 @@ type Props = z.infer<typeof dateCountdownSchema>;
 const { countdownDate } = Astro.props;
 ---
 
-<div class="flex align-middle justify-center">
-  <div class="text-2xl tracking-wide">
+<div class="flex align-middle justify-center w-full">
+  <div class="text-sm tracking-wide sm:text-2xl">
     <span class="text-linaro-yellow" id="days">0</span>
     <span id="days-text">day</span>
     <span class="mx-2">|</span>
