--- a/src/components/cloudinary/CloudinaryImg.astro
+++ b/src/components/cloudinary/CloudinaryImg.astro
@@ -15,6 +15,7 @@ interface Props extends CloudinaryProps {
   errorImage?: string;
   class?: string;
   svg?: boolean;
+  id?: string;
 }
 
 const { src: initialSrc, ...props } = Astro.props;
