--- a/src/components/sections/ConnectSaveDate.astro
+++ b/src/components/sections/ConnectSaveDate.astro
@@ -9,13 +9,10 @@ const { style } = Astro.props;
 ---
 
 <div class:list={[style]}>
-  <h1 class="text-linaro-yellow text-center text-2xl">
-    Let's connect, learn and innovate together
-  </h1>
   <button
     id="saveTheDateBtn"
     class="linaro-gradient-button self-center mt-4 no-underline"
-    >Save the date</button
+    >Save the Date</button
   >
 </div>
 
