--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -43,6 +43,12 @@ const social_image = "";
   title="Linaro.org"
   href={new URL("rss/blog.xml", Astro.site)}
 />
+<link
+  rel="alternate"
+  type="application/rss+xml"
+  title="Linaro.org"
+  href={new URL("feed.xml", Astro.site)}
+/>
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
   <SEO
