--- a/src/components/hero/ConnectHero.astro
+++ b/src/components/hero/ConnectHero.astro
@@ -24,8 +24,8 @@ const markdown = description && (await marked.parse(description));
         class="m-0"
       />
       {inner_image && (
-        <div class="overlay">
-          <div class="overlay-content">
+        <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center">
+          <div class="flex flex-col items-center">
             <CloudinaryImg
               src={inner_image}
               alt="Linaro Connect Logo"
@@ -37,13 +37,18 @@ const markdown = description && (await marked.parse(description));
       )}
     </div>
   ) : (
-    <div class="video-container border-b-[10px] border-b-[#ffce00] border-solid">
-      <video autoplay muted loop class="background-video">
+    <div class="relative w-full h-[500px] overflow-hidden border-b-[10px] border-b-[#ffce00] border-solid">
+      <video
+        autoplay
+        muted
+        loop
+        class="absolute top-1/2 left-1/2 w-[100vw] h-auto -translate-x-1/2 -translate-y-1/2 min-h-full"
+      >
         <source src={background} type="video/mp4" />
         Your browser does not support the video tag.
       </video>
-      <div class="overlay bg-[rgba(0,_0,_0,_0.6)]">
-        <div class="overlay-content">
+      <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center bg-[rgba(0,_0,_0,_0.6)]">
+        <div class="flex flex-col items-center">
           {inner_image && (
             <CloudinaryImg
               src={inner_image}
@@ -52,51 +57,10 @@ const markdown = description && (await marked.parse(description));
               height={200}
             />
           )}
-          <h1 class="text-3xl" set:html={markdown} />
-          <h1 class="text-linaro-yellow text-3xl">{dates}</h1>
+          <h1 class="text-3xl m-0" set:html={markdown} />
+          <h1 class="text-linaro-yellow text-3xl m-0">{dates}</h1>
         </div>
       </div>
     </div>
   )
 }
-
-<style lang="scss">
-  .video-container {
-    position: relative;
-    width: 100%;
-    height: 500px;
-    overflow: hidden;
-  }
-
-  .background-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100vw;
-    height: auto;
-    transform: translate(-50%, -50%);
-    min-height: 100%;
-  }
-
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-  .overlay-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  h1 {
-    margin: 0;
-  }
-</style>
