--- a/src/components/sections/FadedLine.astro
+++ b/src/components/sections/FadedLine.astro
@@ -6,18 +6,7 @@ import * as marked from "marked";
 type Props = z.infer<typeof fadedLineSchema>;
 ---
 
-<style lang="scss">
-  div {
-    height: 1px;
-    width: 20em;
-    margin: 0 auto;
-    background: linear-gradient(
-      90deg,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(255, 255, 255, 1) 50%,
-      rgba(0, 0, 0, 0) 100%
-    );
-  }
-</style>
-
-<div></div>
+<div
+  class="h-px w-[20em] mx-auto bg-gradient-to-r from-transparent to-transparent via-white"
+>
+</div>
