add image prop to basehead

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -7,9 +7,8 @@ import "../../styles/global.scss";
 
 const GA_ID = import.meta.env.GA_ID;
 
-const { title = "", description = "", type = "website" } = Astro.props;
+const { title = "", description = "", type = "website", social_image = "" } = Astro.props;
 
-const social_image = "";
 ---
 
 <head>
