change twitter prop to name

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -77,7 +77,7 @@ const { title = "", description = "", type = "website", social_image = "" } = As
       ],
       meta: [
         {
-          property: "twitter:image",
+          name: "twitter:image",
           content: social_image,
         },
         {
