remove image prop

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,19 +7,13 @@ interface Props {
   title: string;
   description: string;
   type?: string;
-  social_image?: string;
 }
 
-const { title, description, type = "website", social_image } = Astro.props;
+const { title, description, type = "website" } = Astro.props;
 ---
 
 <html lang="en">
-  <BaseHead
-    title={title + " | Linaro"}
-    description={description}
-    type={type}
-    social_image={social_image}
-  />
+  <BaseHead title={title + " | Linaro"} description={description} type={type} />
   <body class="min-h-screen flex flex-col text-white">
     <NavBar />
     <slot />
