tweak seo config

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -5,11 +5,26 @@ import { SEO } from "astro-seo";
 import "@fontsource/lato";
 import "../../styles/global.scss";
 
+import defaultImageFile from 'public/assets/images/Linaro-logo-white.png'
+
 const GA_ID = import.meta.env.GA_ID;
 
 const { title = "", description = "", type = "website" } = Astro.props;
 
-const social_image = "";
+const siteBaseURL = new URL(Astro.url);
+const defaultImage = new URL(defaultImageFile.src, siteBaseURL);
+
+let { image: _image } = Astro.props;
+_image = _image || defaultImage;
+
+let image = null;
+if (typeof _image === 'string') {
+    image = new URL(_image, siteBaseURL);
+} else if (_image && typeof _image['href'] !== 'undefined') {
+    image = new URL(_image['href'], siteBaseURL);
+} else {
+	image = defaultImage;
+}
 ---
 
 <head>
@@ -58,15 +73,23 @@ const social_image = "";
       basic: {
         title: title,
         type: type,
-        image: social_image,
+        image: _image?.src ? _image.src : defaultImage.toString(),
       },
+      image: {
+			url: image.toString(),
+			secureUrl: image.toString(),
+			alt: 'Linaro Blog',
+			height: _image?.height,
+			width: _image?.width,
+			type: _image?.format && `image/${_image.format}`,
+		},
     }}
     ,
     twitter={{
       title: title,
       description: description.slice(0, 196) + "...",
-      card: "summary_large_image",
-      image: social_image,
+      card: image ? 'summary_large_image' : 'summary',
+      image: image ? image.toString() : undefined,
       creator: "@LinaroOrg",
     }}
     extend={{
@@ -77,14 +100,14 @@ const social_image = "";
         },
       ],
       meta: [
-        {
-          name: "twitter:image",
-          content: `${new URL(social_image, Astro.url)}`,
-        },
-        {
-          property: "og:image",
-          content: social_image,
-        },
+        // {
+        //   name: "twitter:image",
+        //   content: ogImageUrl,
+        // },
+        // {
+        //   property: "og:image",
+        //   content: ogImageUrl,
+        // },
         {
           property: "og:description",
           content: description,
