--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -88,7 +88,7 @@ if (related.length > 0) {
 }
 ---
 
-<BaseLayout title={title + " | Blog"} description={description}>
+<BaseLayout title={title + " | Blog"} description={description} image={image}>
   <main
     data-pagefind-body
     data-pagefind-filter={`type:${collection}`}
