--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -10,7 +10,91 @@ const GA_ID = import.meta.env.GA_ID;
 
 const { title = "", description = "", type = "website", image = "" } = Astro.props;
 
-const social_image = getCldOgImageUrl({ src: image });
+//const social_image = getCldOgImageUrl({ src: image });
+const logoPublicId = 'linaro-website/graphics/infinito-cropped.svg';
+
+const social_image = getCldOgImageUrl({
+  src: image,
+  effects: [
+    {
+      background: 'rgb:010A44'
+    },
+    {
+      color: 'rgb:2A005F',
+      colorize: '100'
+    },
+    {
+      gradientFade: 'symmetric'
+    }
+  ],
+  overlays: [
+    {
+      publicId: image,
+      width: 1200,
+      height: 630,
+      crop: 'fill',
+      effects: [
+        { opacity: 20 }
+      ]
+    },
+    {
+      width: 1000,
+      crop: 'fit',
+      text: {
+        color: 'white',
+        fontFamily: 'Merriweather',
+        fontSize: 58,
+        fontWeight: 'bold',
+        lineSpacing: 10,
+        lineSpacing: 10,
+        text: description
+      },
+      position: {
+        x: 100,
+        y: 100,
+        gravity: 'north_west'
+      },
+    },
+    {
+      publicId: image,
+      width: 1000,
+      height: 2,
+      effects: [{
+        colorize: '100,co_white',
+        opacity: 70
+      }],
+      position: {
+        x: 100,
+        y: 175,
+        gravity: 'south_west'
+      },
+    },
+    {
+      width: 60,
+      crop: 'fit',
+      publicId: logoPublicId,
+      position: {
+        x: 100,
+        y: 102,
+        gravity: 'south_west'
+      },
+    },
+    {
+      text: {
+        color: 'white',
+        fontFamily: 'Lato',
+        fontSize: 37,
+        fontWeight: 'bold',
+        text: "Linaro.org | Blog"
+      },
+      position: {
+        x: 180,
+        y: 100,
+        gravity: 'south_west'
+      },
+    },
+  ]
+})
 
 ---
 
