--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -41,7 +41,7 @@ const social_image = getCldOgImageUrl({
       crop: 'fit',
       text: {
         color: 'white',
-        fontFamily: 'sofia-pro',
+        fontFamily: 'Merriweather',
         fontSize: 36,
         fontWeight: 'normal',
         lineSpacing: 10,
