chagne font to Lato

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -41,7 +41,7 @@ const social_image = getCldOgImageUrl({
       crop: 'fit',
       text: {
         color: 'white',
-        fontFamily: 'Merriweather',
+        fontFamily: 'Lato',
         fontSize: 36,
         fontWeight: 'normal',
         lineSpacing: 10,
@@ -84,7 +84,7 @@ const social_image = getCldOgImageUrl({
         fontFamily: 'Lato',
         fontSize: 37,
         fontWeight: 'bold',
-        text: "Linaro.org | Blog"
+        text: "Linaro.org"
       },
       position: {
         x: 180,
